Replace usages of LinkedList with ArrayList/ArrayDeque